# embed-assets

./: .gitignore  README.md
html-template/: Cargo.toml
html-template/src/: main.rs
html-template/templates/: index.html
spa/: Cargo.toml
spa/spa-ui/: package.json
spa/spa-ui/src/: App.vue
spa/spa-ui/src/components/: Now.vue
spa/src/: asset.rs  main.rs
